INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}
  ${CMAKE_SOURCE_DIR}/igloo
  ${CMAKE_BINARY_DIR})

SET(TEST_EXE WtsBdd)

SET(WTS_SOURCES
  ${WatchThatSound_CXX_SOURCES})
LIST(REMOVE_ITEM WTS_SOURCES ${CMAKE_SOURCE_DIR}/main.cpp)

SET(WTS_BDD_SOURCES
  igloo-boilerplate-main.cpp
  ProjectSpec.cpp
  ${WTS_SOURCES})

ADD_PCH_INCLUDE(../stable.h WTS_BDD_SOURCES)

ADD_CUSTOM_TARGET(test
  COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${TEST_EXE}
  DEPENDS ${TEST_EXE})

ADD_EXECUTABLE(
  ${TEST_EXE}
  EXCLUDE_FROM_ALL
  ${WTS_BDD_SOURCES})
TARGET_LINK_LIBRARIES(${TEST_EXE}
  ${QT_LIBRARIES}
  ${FFmpeg_LIBRARIES}
  ${Portaudio_LIBRARIES}
  ${SndFile_LIBRARY})
